# ex-GPT-STT

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  main.py  pyproject.toml  setup_hf_token.py  speaker_diarization.py  stt.py  stt_simple.py
.github/workflows/: ci.yml
benchmark/: README.md  utils.py
docker/: Dockerfile  README.md  docker-compose.yml  docker_infer.py
tests/: conftest.py  test_korean_stt.py  test_meeting_minutes.py
